hw4/k8s/service.yml
apiVersion: v1

kind: Service

metadata:
  name: hi-er
spec:
  selector:
    app: hi-er
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
