hw4/k8s/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: hi.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hi-er
            port:
              number: 8080
